[ADD] Support for English and Spanish needing to add ?lang=en to the URL in order to change the applications's language

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,1 +1,44 @@
-login=Acessar
+login=Entrar
+email=Correo electrónico
+password=Contraseña
+forgot=¿Olvidaste tu contraseña?
+newTo=¿Nuevo en OpenStreamify?
+signUp=Registro
+createAccount=Crea tu cuenta OpenStreamify
+emailAdress=Correo electrónico
+confirmPassword=Confirmar Contraseña
+passwordReset=Cambia tu contraseña
+resetPwdText=Ingrese la dirección de correo electrónico asociada con su cuenta y le enviaremos un enlace para restablecer su contraseña.
+enterYourEmail=Introduce tu correo electrónico
+sendEmail=Enviar correo electrónico
+backLogin=Volver a iniciar sesión
+home=Página de inicio
+movies=Películas
+series=Series
+lives=Lives
+myList=Mi lista
+notifications=Ver todas las notificaciones
+profile=Perfil
+settings=Configuraciones
+logout=Salir
+recommend=Recomendado para ti
+about=Acerca de OpenStreamify
+accessibility=Accesibilidad
+help=Ayuda
+devices=Dispositivos compatibles
+terms=Condiciones de uso
+privacy=Política de privacidad
+content=Contenido
+originals=Originales de OpenStreamify
+documentaries=Documentales
+children=Para niños
+partnerships=Asociaciones
+advertising=Publicidad
+carrers=Carreras
+investers=Inversores
+follow=Síganos
+rights=\u00A9. 2024 OpenStreamify. Reservados todos los derechos.
+others=Otros
+play=Asistir
+trailer=Trailer
+synopsis=Sinopsis
