[ADD] initial config of the notifications bell

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -39,7 +39,7 @@ advertising=Advertising
 carrers=Carrers
 investers=Investers
 follow=Follow-us
-rights=\u00A9. 2024 OpenStreamify. All Rights Reserverd.
+rights=\u00A9. 2024 OpenStreamify. All Rights Reserved.
 others=Others
 play=Play
 trailer=Trailer
