--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -42,3 +42,14 @@ others=Otros
 play=Asistir
 trailer=Trailer
 synopsis=Sinopsis
+
+main-text-code=Código de verificación
+greeting = Hola,
+your-verification-code=Su código de verificación es:
+use-this-code=Utilice este código para completar su solicitud. El código caduca en 10 minutos.
+ignore-email=Si no solicitó este código, ignore este correo electrónico.
+rightsWithAdd=\u00A9; 2024 OpenStreamify. Todos los derechos reservados.<br> 230 Park Avenue South, Nueva York, NY 10003 | Contacto: ismaeldenunes@gmail.com
+
+ignore-password-reset=Si no ha solicitado un restablecimiento de contraseña, ignore este correo electrónico.
+main-password-reset=Hemos recibido una solicitud para restablecer la contraseña de su cuenta. Haga clic en el botón a continuación para restablecer su contraseña:
+redefinition=Restablecer contraseña
