[FIX] Emails templates to proper folder

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -50,7 +50,7 @@ greeting=Hello,
 your-verification-code=Your verification code is:
 use-this-code=Use this code to complete your request. The code expires in 10 minutes.
 ignore-email=If you did not request this code, ignore this email.
-rightsWithAdd=\u00A9; 2024 OpenStreamify. All rights reserved. 230 Park Avenue South, New York, NY 10003 | Contact: ismaeldenunes@gmail.com
+rightsWithAdd=\u00A9. 2024 OpenStreamify. All rights reserved. 230 Park Avenue South, New York, NY 10003 | Contact: ismaeldenunes@gmail.com
 
 ignore-password-reset=If you did not request a password reset, please ignore this email.
 main-password-reset=We have received a request to reset your account password. Please click the button below to reset your password:
