--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,7 +48,7 @@ greeting=Olá,
 your-verification-code=Seu código de verificação é:
 use-this-code=Use este código para concluir sua solicitação. O código expira em 10 minutos.
 ignore-email=Se você não solicitou este código, ignore este e-mail.
-rightsWithAdd=\u00A9; 2024 OpenStreamify. Todos os direitos reservados. 230 Park Avenue South, New York, NY 10003 | Contato: ismaeldenunes@gmail.com
+rightsWithAdd=\u00A9. 2024 OpenStreamify. Todos os direitos reservados. 230 Park Avenue South, New York, NY 10003 | Contato: ismaeldenunes@gmail.com
 
 ignore-password-reset=Se você não solicitou a redefinição de senha, ignore este email.
 main-password-reset=Recebemos uma solicitação para redefinir a senha da sua conta. Clique no botão abaixo para redefinir sua senha:
